modificando linkedin y borrando reset.css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <footer class="footer">
         <p> Milagros Poletti, diciembre 2022</p> 
         <div class="contac">
-            <a  href="https://www.linkedin.com/in/milagros-elizabeth-poletti-a331a7227/"> 
+            <a  href="www.linkedin.com/in/milagros-elizabeth-poletti"> 
                 <img class="linkedin" src="imagenes/linkedin.png" alt="linkedin" >
                 <p class="vinculo">Linkedin</p> 
             </a>
